--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -73,9 +73,9 @@
           <span class="float-right">
           <a href="#">Back to top</a>
           </span>
-          <span>© 2019 Company, Inc. · 
-          <a href="#">Facebook</a> · 
-          <a href="#">Twitter</a>
+          <span>© 2020 Wojciech Dobrychłop
+          <a href="https://github.com/WojDob/">Github</a> · 
+          <a href="https://www.linkedin.com/in/wojciech-dobrych%C5%82op-95840a1a4/">LinkedIn</a>
           </span>
         </div>
       </footer>
