--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -9,7 +9,7 @@
   <div class="row">
     <main role="main" class="inner cover">
       <h1 class="cover-heading">Wojciech Dobrychłop</h1>
-      <p class="lead">Student with a passion for programming. Definitely check out my portfolio, as well
+      <p class="lead">I'm a student with a passion for programming. Definitely check out my portfolio, as well
       as various tools I built into this website!</p>
       <p class="lead">
         <a href="{% url 'myapp:about' %}" class="btn btn-lg btn-secondary">Learn more</a>
