Made blog posts

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,7 +11,7 @@
       <h1>{{object.title}}</h1>
       <p class="lead">
         by
-        <a href="#">andrzej</a>
+        <a href="#">Wojciech</a>
       </p>
       <hr>
       <!-- Begin:: Date/Time -->
