Added projects to home page

--- a/myapp/static/myapp/css/carousel.css
+++ b/myapp/static/myapp/css/carousel.css
@@ -11,10 +11,19 @@ body {
 
 .center-text{
   text-align: center;
-    padding-top: 50px;
-  padding-right: 30px;
+  padding-top: 50px;
+  padding-right: 80px;
   padding-bottom: 50px;
   padding-left: 80px;
+}
+
+.name{
+  font-size: 500%;
+  padding-top: 50px;
+  padding-right: 80px;
+  padding-bottom: 50px;
+  padding-left: 80px;
+}
 }
 
 /* CUSTOMIZE THE CAROUSEL
