--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -9,7 +9,7 @@
   <div class="row">
     <main role="main" class="inner cover">
       <div class="center-text">
-        <h1 class="featurette-heading">Wojciech Dobrychłop</h1>
+        <div class="name"> Wojciech Dobrychłop </div>
         <p class="lead">I'm a student with a passion for programming. Check out my portfolio below, as well
         as various tools I built into this website!</p>
         <p class="lead">
@@ -21,11 +21,15 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Simplistity. <span class="text-muted">A to-do list that's simple.</span></h2>
+        <p class="lead">A task list desktop application developed in C# using Windows Forms. Heavily inspired by 
+          <a href="http://todotxt.org/">Todo.txt</a>
+        </p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <a href="https://github.com/WojDob/Simplistity">
+          <img src="{% static "myapp/img/simplistity.png" %}" alt="Simplistity screenshot"></svg>
+        </a>
       </div>
     </div>
 
@@ -33,11 +37,13 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Identification of protein domains consisting of <span class="text-muted"> repeated dipeptide motifs.</span></h2>
+        <p class="lead">A statistical analysis of large sets of data including proteomes of 10 plants. I used Python to create a tool that allows molecular biologists to identify proteins which exhibit significant overrepresentation of dipeptide motifs.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <a href="https://github.com/WojDob/Protein-domains-identification">
+          <img src="{% static "myapp/img/domains.png" %}" width="460" height="520" alt="Multiple sequence alignment"></svg>
+        </a>
       </div>
     </div>
 
@@ -45,11 +51,14 @@
 
     <div class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">This website. <span class="text-muted">And all the cool stuff it contains. </span></h2>
+        <p class="lead">Created with Django, this very website features a fully functional blog, an application showcasing news from various publishers, and also some simple (but handy)
+        bioinformatics tools.</p>
       </div>
       <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <a href="https://github.com/WojDob/portfolio-website">
+          <img src="{% static "myapp/img/seqcontent.png" %}" alt="Screenshot of the news section"></svg>
+        </a>
       </div>
     </div>
 
