--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -5,18 +5,31 @@
 
 {% block content %}
 
+<!-- TODO: Export the CSS from here into a style.css -->
+<div style="background-image:url({% static "myapp/img/forest.jpg" %});height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+    <div class="d-flex justify-content-center align-items-center" style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
+        <div class="d-flex align-items-center order-12" style="height:200px;">
+            <div class="container mt-5">
+                <h1 class="text-center" style="color:rgb(242,245,248);font-size:70px;font-weight:bold;">Wojciech Dobrychłop</h1>
+                <h3 class="text-center" style="color:rgb(242,245,248);padding-top:0.25em;padding-bottom:0.25em;font-weight:normal;">A student with a passion for programming.</h3>
+                
+                  
+                <div class="col-md-12 text-center mt-5"> 
+                  <a href="{% url 'myapp:contact' %}" class="btn btn-lg btn-light">Contact me</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 <div class="container mt-5">
   <div class="row">
-    <main role="main" class="inner cover">
-      <div class="center-text">
-        <div class="name"> Wojciech Dobrychłop </div>
-        <p class="lead">I'm a student with a passion for programming. Check out my portfolio below, as well
-        as various tools I built into this website!</p>
-        <p class="lead">
-          <a href="{% url 'myapp:contact' %}" class="btn btn-lg btn-secondary">Contact me</a>
-        </p>
-      </div>
-    </main>
+
     <hr class="featurette-divider">
 
     <div class="row featurette">
