--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -6,14 +6,13 @@
 {% block content %}
 
 <!-- TODO: Export the CSS from here into a style.css -->
+
 <div style="background-image:url({% static "myapp/img/forest.jpg" %});height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
     <div class="d-flex justify-content-center align-items-center" style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
         <div class="d-flex align-items-center order-12" style="height:200px;">
             <div class="container mt-5">
                 <h1 class="text-center" style="color:rgb(242,245,248);font-size:70px;font-weight:bold;">Wojciech Dobrychłop</h1>
-                <h3 class="text-center" style="color:rgb(242,245,248);padding-top:0.25em;padding-bottom:0.25em;font-weight:normal;">A student with a passion for programming.</h3>
-                
-                  
+                <h3 class="text-center" style="color:rgb(242,245,248);padding-top:0.25em;padding-bottom:0.25em;font-weight:normal;">A student with a passion for programming.</h3>                  
                 <div class="col-md-12 text-center mt-5"> 
                   <a href="{% url 'myapp:contact' %}" class="btn btn-lg btn-light">Contact me</a>
                 </div>
@@ -21,11 +20,6 @@
         </div>
     </div>
 </div>
-
-
-
-
-
 
 <div class="container mt-5">
   <div class="row">
@@ -55,7 +49,7 @@
       </div>
       <div class="col-md-5 order-md-1">
         <a href="https://github.com/WojDob/Protein-domains-identification">
-          <img src="{% static "myapp/img/domains.png" %}" width="460" height="520" alt="Multiple sequence alignment"></svg>
+          <img src="{% static "myapp/img/domainsSmaller.png" %}" alt="Multiple sequence alignment screenshot"></svg>
         </a>
       </div>
     </div>
@@ -77,7 +71,11 @@
 
     <hr class="featurette-divider">
 
-    <!-- /END THE FEATURETTES -->
+    <div class="col-md-12 text-center mt-5 mb-5 p-5"> 
+      <p class="featurette-heading">See more of my work: <a href="{% url 'myapp:contact' %}" class="btn btn-lg btn-dark">GitHub</a></p>            
+    </div>
+
+
   </div>
 </div>
 
