Linked the buttons to github and linkedin

--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -14,7 +14,7 @@
                 <h1 class="text-center" style="color:rgb(242,245,248);font-size:70px;font-weight:bold;">Wojciech Dobrychłop</h1>
                 <h3 class="text-center" style="color:rgb(242,245,248);padding-top:0.25em;padding-bottom:0.25em;font-weight:normal;">A student with a passion for programming.</h3>                  
                 <div class="col-md-12 text-center mt-5"> 
-                  <a href="{% url 'myapp:contact' %}" class="btn btn-lg btn-light">Contact me</a>
+                  <a href="https://www.linkedin.com/in/wojciech-dobrych%C5%82op-95840a1a4/" target="_blank" class="btn btn-lg btn-light">Contact me</a>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
     <hr class="featurette-divider">
 
     <div class="col-md-12 text-center mt-5 mb-5 p-5"> 
-      <p class="featurette-heading">See more of my work: <a href="{% url 'myapp:contact' %}" class="btn btn-lg btn-dark">GitHub</a></p>            
+      <p class="featurette-heading">See more of my work: <a href="https://github.com/WojDob/" target="_blank" class="btn btn-lg btn-dark">GitHub</a></p>            
     </div>
 
 
