--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="{% static 'myapp/css/sticky-footer-navbar.css' %}">
     <link rel="stylesheet" href="{% static 'myapp/css/style.css' %}">
     <!-- end::My styles -->
+
+    <!-- BOOTSTRAP -->
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
   </head>
   <body>
     <!-- begin::Header -->
