--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -7,7 +7,7 @@
 
 <!-- TODO: Export the CSS from here into a style.css -->
 
-<div style="background-image:url({% static "myapp/img/forest.jpg" %});height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+<div style="background-image:url({% static "myapp/img/forest.jpg" %});width:100%;height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
     <div class="d-flex justify-content-center align-items-center" style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
         <div class="d-flex align-items-center order-12" style="height:200px;">
             <div class="container mt-5">
@@ -20,6 +20,7 @@
         </div>
     </div>
 </div>
+
 
 <div class="container mt-5">
   <div class="row">
@@ -35,7 +36,7 @@
       </div>
       <div class="col-md-5">
         <a href="https://github.com/WojDob/Simplistity">
-          <img src="{% static "myapp/img/simplistity.png" %}" alt="Simplistity screenshot"></svg>
+          <img class="responsive-img" src="{% static "myapp/img/simplistity.png" %}" alt="Simplistity screenshot"></svg>
         </a>
       </div>
     </div>
@@ -49,7 +50,7 @@
       </div>
       <div class="col-md-5 order-md-1">
         <a href="https://github.com/WojDob/Protein-domains-identification">
-          <img src="{% static "myapp/img/domainsSmaller.png" %}" alt="Multiple sequence alignment screenshot"></svg>
+          <img class="responsive-img"  src="{% static "myapp/img/domainsSmaller.png" %}" alt="Multiple sequence alignment screenshot"></svg>
         </a>
       </div>
     </div>
@@ -64,7 +65,7 @@
       </div>
       <div class="col-md-5">
         <a href="https://github.com/WojDob/portfolio-website">
-          <img src="{% static "myapp/img/seqcontent.png" %}" alt="Screenshot of the news section"></svg>
+          <img class="responsive-img"  src="{% static "myapp/img/seqcontent.png" %}" alt="Screenshot of the news section"></svg>
         </a>
       </div>
     </div>
