--- a/myapp/static/myapp/css/carousel.css
+++ b/myapp/static/myapp/css/carousel.css
@@ -25,6 +25,10 @@ body {
   padding-left: 80px;
 }
 
+.responsive-img {
+  width: 100%;
+  height: auto;
+}
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
