--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -7,7 +7,7 @@
 
 <!-- TODO: Export the CSS from here into a style.css -->
 
-<div style="background-image:url({% static "myapp/img/forest.jpg" %});width:100%;height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
+<div style="background-image:url({% static "myapp/img/forest.jpg" %});max-width: 100%; min-height: 100%;width:100%;height:500px;background-position:center;background-size:cover;background-repeat:no-repeat;">
     <div class="d-flex justify-content-center align-items-center" style="height:inherit;min-height:initial;width:100%;position:absolute;left:0;background-color:rgba(30,41,99,0.53);">
         <div class="d-flex align-items-center order-12" style="height:200px;">
             <div class="container mt-5">
