Removed faulty link button

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -74,8 +74,8 @@
           <a href="#">Back to top</a>
           </span>
           <span>© 2020 Wojciech Dobrychłop
-          <a href="https://github.com/WojDob/">Github</a> · 
-          <a href="https://www.linkedin.com/in/wojciech-dobrych%C5%82op-95840a1a4/">LinkedIn</a>
+          <a href="https://github.com/WojDob/" target="_blank">Github</a> · 
+          <a href="https://linkedin.com/in/wojciech-dobrychlop/" target="_blank">LinkedIn</a>
           </span>
         </div>
       </footer>
