--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -12,10 +12,12 @@
         <div class="d-flex align-items-center order-12" style="height:200px;">
             <div class="container mt-5">
                 <h1 class="text-center" style="color:rgb(242,245,248);font-size:70px;font-weight:bold;">Wojciech Dobrychłop</h1>
-                <h3 class="text-center" style="color:rgb(242,245,248);padding-top:0.25em;padding-bottom:0.25em;font-weight:normal;">A student with a passion for programming.</h3>                  
+                <h3 class="text-center" style="color:rgb(242,245,248);padding-top:0.25em;padding-bottom:0.25em;font-weight:normal;">A student with a passion for programming.</h3> 
+                <!--                 
                 <div class="col-md-12 text-center mt-5"> 
-                  <a href="https://www.linkedin.com/in/wojciech-dobrych%C5%82op-95840a1a4/" target="_blank" class="btn btn-lg btn-light">Contact me</a>
+                  <a href="https://linkedin.com/in/wojciech-dobrychlop" target="_blank" class="btn btn-lg btn-light">Contact me</a>
                 </div>
+                -->
             </div>
         </div>
     </div>
