Updated abstract page

--- a/myapp/templates/myapp/abstract.html
+++ b/myapp/templates/myapp/abstract.html
@@ -14,7 +14,12 @@
 
   </head>
   <body>
-  	<div style="max-width:800px;">
+  	<div style="	
+  	margin:40px auto;
+	max-width:800px;
+	line-height:1.6;
+	color:#444;
+	padding:0 10px;">
 	  	<h1 class = "abstract-header">Identification of protein domains consisting of repeated dipeptide motifs.</h1>
 	  	<div class = "abstract-body">
 	    	<p>
