--- a/myapp/templates/myapp/abstract.html
+++ b/myapp/templates/myapp/abstract.html
@@ -34,6 +34,15 @@
 			I identified <b>967</b> Arabidopsis thaliana proteins which exhibit significant (<b>p < 10^-4</b>) overrepresentation of dipeptide motifs. Some proteins (33%) exhibit overrepresentation of more than one motif - a total of <b>2337</b> occurences of overrepresentation of dipeptides were found in those proteins. Out of 210 possible combinations of two aminoacids, 205 exhibit at least one overrepresentation. The developed method also identified all four WG/GW proteins with experimentally confirmed function of binding Argonaute proteins. For 524 overrepresentations in A.thaliana at least one orthologous protein exhibits overrepresentation of the same dipeptide motif, which can indicate the evolutionary and functional conservation of analysed motifs.
 			</p>
 		</div>
+		<img src="{% static "myapp/img/slidingClamp.png" %}" alt="Simplistity screenshot"></svg>
+		<p> Sliding clamp domain in different yeast and E. coli - notice the simillarity in structure despite huge differences in amino acid sequence</p>
+
+        <img src="{% static "myapp/img/domainsWGGW.png" %}" alt="Simplistity screenshot"></svg>
+        <p>NRPE1 in A. thaliana and B. rapa, with WG/GW domain highlighted with a blue box.</p>
+
+        <img class="responsive-img" src="{% static "myapp/img/aminoacids.png" %}" alt="Simplistity screenshot"></svg>
+        <p>Amino acid content of proteins with overrepresentation of dipeptides.</p>
+
 	</div>
   </body>
 </html>
