--- a/myapp/static/myapp/css/carousel.css
+++ b/myapp/static/myapp/css/carousel.css
@@ -18,17 +18,49 @@ body {
 }
 
 .name{
-  font-size: 500%;
-  padding-top: 50px;
-  padding-right: 80px;
-  padding-bottom: 50px;
-  padding-left: 80px;
+  color:rgb(242,245,248);
+  font-size:70px;
+  font-weight:bold;
+}
+
+.desc{
+  color:rgb(242,245,248);
+  padding-top:0.25em;
+padding-bottom:0.25em;
+  font-weight:normal; 
+  color:rgb(242,245,248);
 }
 
 .responsive-img {
   width: 100%;
   height: auto;
 }
+
+
+.background-forest{
+  background-image:url("../img/forest.jpg");
+  max-width: 100%; 
+  min-height: 100%;
+  width:100%;
+  height:500px;
+  background-position:center;
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+
+.height200{
+  height:200px;
+}
+
+.inside-forest{
+  height:inherit;
+  min-height:initial;
+  width:100%;
+  position:absolute;
+  left:0;
+  background-color:rgba(30,41,99,0.53);
+}
+
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
