--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'myapp/css/carousel.css' %}">
     <link rel="stylesheet" href="{% static 'myapp/css/sticky-footer-navbar.css' %}">
     <link rel="stylesheet" href="{% static 'myapp/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'myapp/css/debug.css' %}">
     <!-- end::My styles -->
 
   </head>
